<resources>
    <string name="app_name">Profile</string>
    <string name="avatar_title">Select Avatar</string>
    <string name="profile_title">User profile</string>
    <string name="profile_save" />
    <string name="avatar">Avatar</string>
    <string name="lblName">Name(*)</string>
    <string name="hintName">(name)</string>
    <string name="lblEmail">Email(*)</string>
    <string name="hintEmail">(email)</string>
    <string name="lblPhone">Phone number(*)</string>
    <string name="hintPhone">(phone)</string>
    <string name="hintAddress">(address)</string>
    <string name="lblAddress">Address(*)</string>
    <string name="lblWeb">Web(*)</string>
    <string name="hintWeb">(url)</string>
    <string name="lblRequired">(*) Required</string>
    <string name="avatar_select">Select an avatar</string>
    <string name="SavedSuccessfully">User saved successfully</string>
    <string name="msg_EmptyText">Empty text</string>
    <string name="msg_InvalidPhone">Invalid phone</string>
    <string name="msg_InvalidEmail">Invalid email</string>
    <string name="msg_InvalidURL">Invalid url</string>
    <string name="noAPP">There is no application to perform the action</string>
</resources>
